--- a/app/src/main/res/layout/fragment_al.xml
+++ b/app/src/main/res/layout/fragment_al.xml
@@ -14,7 +14,7 @@
         android:id="@+id/recycler_view_one"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:LayoutManager="LinearLayoutManager"
+        app:layoutManager="LinearLayoutManager"
         android:scrollbars="vertical" />
 </FrameLayout>
 </layout>
