--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,4 +11,16 @@
         android:label="TitleFragment"
         tools:layout="@layout/fragment_title"
         />
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.jimmy.englishportuguesevocabbuilderapp.AboutFragment"
+        android:label="AboutFragment"
+        tools:layout="@layout/fragment_about"
+        />
+    <fragment
+        android:id="@+id/alFragment"
+        android:name="com.jimmy.englishportuguesevocabbuilderapp.AlFragment"
+        android:label="AlFragment"
+        tools:layout="@layout/fragment_al"
+        />
 </navigation>
